Added input textarea.

--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,8 @@
         <div class="container">
             <h1>Console.js</h1>
             <h2 class="small">A JavaScript library that overrides the console object bringing its functionality in a DOM element.</h2>
-            <pre class="console">Sample output</pre>
+            <pre class="console"></pre>
+            <textarea class="js-code-to-run"></textarea>
         </div>
     </body>
 </html>
