Changed the title

--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Hello World</title>
+        <title>Console.js</title>
         <link rel="stylesheet" href="css/style.css">
         <script src="js/jquery.min.js"></script>
         <script src="../lib/console.js"></script>
