--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Console.js</title>
         <link rel="stylesheet" href="css/style.css">
         <script src="js/jquery.min.js"></script>
-        <script src="../lib/console.js"></script>
+        <script src="https://rawgithub.com/IonicaBizau/console.js/master/lib/console.js"></script>
         <script src="js/functions.js"></script>
     </head>
     <body>
