--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2 class="small">A JavaScript library that overrides the console object bringing its functionality in a DOM element.</h2>
             <pre class="console"></pre>
             <textarea class="js-code-to-run"></textarea>
-            <a href="https://github.com/IonicaBizau/console.js" target="blank">Browse the code on GtiHub</a>
+            <a href="https://github.com/IonicaBizau/console.js" target="blank">Browse the code on GitHub</a>
         </div>
     </body>
 </html>
